# libMPSSE

./: CMakeLists.txt  ftdi_common.c  ftdi_common.h  ftdi_i2c.c  ftdi_i2c.h  ftdi_infra.c  ftdi_infra.h  ftdi_mid.c  ftdi_mid.h  ftdi_spi.c  ftdi_spi.h
Include/: libMPSSE_i2c.h  libMPSSE_spi.h
libftd2xx1/Include/: ftd2xx.h
samples/: i2c-sample.c  spi-sample.c
samples/I2C/: sample-dynamic.c  sample-static.c
udev/: 99-ftdi.rules
